[gd_scene load_steps=11 format=2]

[ext_resource path="res://EditPiece.gd" type="Script" id=1]
[ext_resource path="res://fonts/SWAP_Piece.tres" type="DynamicFont" id=2]
[ext_resource path="res://tiles/cursorBox.png" type="Texture" id=3]
[ext_resource path="res://ThemedScaledSprite.gd" type="Script" id=4]
[ext_resource path="res://tiles/cursorBox.stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://icons/spawnpoint.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="0" type="Button"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
button_mask = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThemedScaledSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "idle"
centered = false
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 4 )
passby_press = true
[connection signal="gui_input" from="." to="." method="_on_self_gui_input"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
